Fix backface visibility bug in older safari and some footer adjustments

--- a/src/index.css
+++ b/src/index.css
@@ -94,8 +94,8 @@ body {
 	position: relative;
 	display: flex;
 	min-width: 320px;
+	min-height: 100vh;
 	min-height: 100dvh;
-	min-height: 100svh;
 	/* height: calc(100vh - env(safe-area-inset-bottom)); */
 	margin: 0 auto;
 	background-image: url("/img/pokewp.jpg");
@@ -139,7 +139,7 @@ body.game-over, html {
 }
 .card-container.bs-16 .pokeCard {
 	height: 15vh;
-	height: 15svh;	
+	height: 15dvh;	
 }
 .card-container.bs-16 .frontCardImg {
 	width: 60%;
@@ -157,7 +157,7 @@ body.game-over, html {
 	background: #FFF;
 	width: 100%;
 	height: 16vh;
-	height: 16svh;
+	height: 16dvh;
 	color: rgb(var(--blue));
 	background: rgb(53,106,150);
 	/* border-color: var(--darkblue);
@@ -169,7 +169,7 @@ body.game-over, html {
 	8px 0 var(--darkblue), -8px 0 var(--darkblue), 0 -8px var(--darkblue), 0 8px var(--darkblue), 0 0 0 4px var(--darkblue);
 }
 .frontCardImg {
-	width: 70%;
+	width: 50%;
 	display: block;
 	margin: 0 auto;
 }
@@ -243,7 +243,7 @@ i.gcolor9 { text-shadow: var(--blue) -4px -4px 0, var(--blue) 4px -4px 0, var(--
 }
 
 .card-btn {
-	flex: calc(33.333% - 1rem);
+	flex: calc(33.333% - 1.5rem);
 	padding: 0;
 	border: none;
 	background: none;
@@ -377,15 +377,16 @@ h1 i span {
 	8px 0 var(--blue), -8px 0 var(--blue), 0 -8px var(--blue), 0 8px var(--blue), 0 0 0 4px var(--blue);
 }
 .restart-container {
-	display: none;
+	/* display: none; */
 	transform: translateY(13px);
 }
 .restart-container span {
-	display: inline-block;
-	font-size: 0.75rem;
-	letter-spacing: -0.05rem;
-	transform: translate(-10px, 3px);
-	color: var(--blue);
+    display: inline-block;
+    font-size: 0.7rem;
+    letter-spacing: -0.05rem;
+    transform: translate(-8px, 4px);
+    color: var(--blue);
+    margin-right: -9px;
 }
 .error {
 	font-size: 1.25rem;
@@ -642,7 +643,6 @@ header p {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	min-width: 190px;
 	height: 34px;
 	text-align: center;
 }
@@ -655,6 +655,8 @@ header p {
 	font-size: 1.125rem;
 	background: var(--greentran);
 	color: #FFF;
+	width: 175px;
+	padding: 0 10px;
 	box-shadow: var(--pixelBorder), 5px 0 var(--greentran), -6px 0 var(--greentran), 0 -6px var(--greentran), 0 6px var(--greentran), 0 0 0 3px var(--greentran);
 }
 .power-ups .icon-pokeball {
@@ -857,11 +859,18 @@ header p {
 	transition-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
 	transition-duration: 0.75s;
 	transition-property: transform, opacity;
+	-webkit-perspective: 0;
+	perspective: 0;
+	-webkit-backface-visibility: hidden;
+	-webkit-transform: translate3d(0,0,0);
+	transform: translate3d(0,0,0);
+	visibility:visible;
 	backface-visibility: hidden;
 }
 .flip > .front {
 	transform: rotateY(0deg);
 }
+
 .flip > .back {
 	position: absolute;
 	opacity: 0;
@@ -873,6 +882,9 @@ header p {
 }
 .flip.flipped > .front,.flip.reveal > .front {
 	transform: rotateY(180deg);
+}
+.flip.flipped > .front svg {
+	opacity: 0;
 }
 .flip.flipped > .back,.flip.reveal > .back  {
 	opacity: 1;
@@ -893,13 +905,13 @@ header p {
 		margin-top: 3rem;
 	}
 	.gameOvered h2 { margin: 1rem 0 2rem 0; }
-	.pokeCard { height: 20vh; height: 20svh; }
+	.pokeCard { height: 20vh; height: 20dvh; }
 	.card-container.bs-16 {
 		gap: 1.5rem;
 	}
 	.card-container.bs-16 .pokeCard {
-		height: 16.5svh;
-		height: 16.5svh;
+		height: 16.5vh;
+		height: 16.5dvh;
 	}
 	.pokeCard img {
 		width: 20vh;
@@ -918,6 +930,7 @@ header p {
 		/* font-size: 1.125rem; */
 		color: var(--darkblue);
 		/* color: #33512b; */
+		width: 170px;
 		background: var(--yellowtran);
 		text-shadow: 0 1px 0 rgba(255 255 255 / 0.2);
 		text-align: center;
